src/antlr/JavaScriptParser.js
// Generated from .\JavaScriptParser.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var JavaScriptParserListener = require('./JavaScriptParserListener').JavaScriptParserListener;
var JavaScriptParserVisitor = require('./JavaScriptParserVisitor').JavaScriptParserVisitor;

var JavaScriptBaseParser = require('./JavaScriptBaseParser').JavaScriptBaseParser;

var grammarFileName = "JavaScriptParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, "'['", "']'", "'('", "')'", 
                     "'{'", "'}'", "';'", "','", "'='", "'?'", "':'", "'...'", 
                     "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", 
                     "'*'", "'/'", "'%'", "'>>'", "'<<'", "'>>>'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'==='", "'!=='", 
                     "'&'", "'^'", "'|'", "'&&'", "'||'", "'*='", "'/='", 
                     "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", 
                     "'&='", "'^='", "'|='", "'=>'", "'null'", null, null, 
                     null, null, null, null, "'break'", "'do'", "'instanceof'", 
                     "'typeof'", "'case'", "'else'", "'new'", "'var'", "'catch'", 
                     "'finally'", "'return'", "'void'", "'continue'", "'for'", 
                     "'switch'", "'while'", "'debugger'", "'function'", 
                     "'this'", "'with'", "'default'", "'if'", "'throw'", 
                     "'delete'", "'in'", "'try'", "'class'", "'enum'", "'extends'", 
                     "'super'", "'const'", "'export'", "'import'", "'implements'", 
                     "'let'", "'private'", "'public'", "'interface'", "'package'", 
                     "'protected'", "'static'", "'yield'" ];

var symbolicNames = [ null, "MultiLineComment", "SingleLineComment", "RegularExpressionLiteral", 
                      "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", 
                      "OpenBrace", "CloseBrace", "SemiColon", "Comma", "Assign", 
                      "QuestionMark", "Colon", "Ellipsis", "Dot", "PlusPlus", 
                      "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", 
                      "Divide", "Modulus", "RightShiftArithmetic", "LeftShiftArithmetic", 
                      "RightShiftLogical", "LessThan", "MoreThan", "LessThanEquals", 
                      "GreaterThanEquals", "Equals_", "NotEquals", "IdentityEquals", 
                      "IdentityNotEquals", "BitAnd", "BitXOr", "BitOr", 
                      "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
                      "PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", 
                      "RightShiftArithmeticAssign", "RightShiftLogicalAssign", 
                      "BitAndAssign", "BitXorAssign", "BitOrAssign", "ARROW", 
                      "NullLiteral", "BooleanLiteral", "DecimalLiteral", 
                      "HexIntegerLiteral", "OctalIntegerLiteral", "OctalIntegerLiteral2", 
                      "BinaryIntegerLiteral", "Break", "Do", "Instanceof", 
                      "Typeof", "Case", "Else", "New", "Var", "Catch", "Finally", 
                      "Return", "Void", "Continue", "For", "Switch", "While", 
                      "Debugger", "Function", "This", "With", "Default", 
                      "If", "Throw", "Delete", "In", "Try", "Class", "Enum", 
                      "Extends", "Super", "Const", "Export", "Import", "Implements", 
                      "Let", "Private", "Public", "Interface", "Package", 
                      "Protected", "Static", "Yield", "Identifier", "StringLiteral", 
                      "TemplateStringLiteral", "WhiteSpaces", "LineTerminator", 
                      "HtmlComment", "CDataComment", "UnexpectedCharacter" ];

var ruleNames =  [ "program", "sourceElement", "statement", "block", "statementList", 
                   "variableStatement", "variableDeclarationList", "variableDeclaration", 
                   "variableName", "emptyStatement", "expressionStatement", 
                   "ifStatement", "iterationStatement", "varModifier", "continueStatement", 
                   "breakStatement", "returnStatement", "withStatement", 
                   "switchStatement", "caseBlock", "caseClauses", "caseClause", 
                   "defaultClause", "labelledStatement", "throwStatement", 
                   "tryStatement", "catchProduction", "finallyProduction", 
                   "debuggerStatement", "functionDeclaration", "classDeclaration", 
                   "classTail", "classElement", "methodDefinition", "generatorMethod", 
                   "formalParameterList", "formalParameterArg", "lastFormalParameterArg", 
                   "functionBody", "sourceElements", "arrayLiteral", "elementList", 
                   "lastElement", "objectLiteral", "propertyAssignment", 
                   "propertyName", "arguments", "lastArgument", "expressionSequence", 
                   "singleExpression", "arrowFunctionParameters", "arrowFunctionBody", 
                   "assignmentOperator", "literal", "numericLiteral", "identifierName", 
                   "reservedWord", "keyword", "getter", "setter", "eos" ];

function JavaScriptParser (input) {
	JavaScriptBaseParser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

JavaScriptParser.prototype = Object.create(JavaScriptBaseParser.prototype);
JavaScriptParser.prototype.constructor = JavaScriptParser;

Object.defineProperty(JavaScriptParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

JavaScriptParser.EOF = antlr4.Token.EOF;
JavaScriptParser.MultiLineComment = 1;
JavaScriptParser.SingleLineComment = 2;
JavaScriptParser.RegularExpressionLiteral = 3;
JavaScriptParser.OpenBracket = 4;
JavaScriptParser.CloseBracket = 5;
JavaScriptParser.OpenParen = 6;
JavaScriptParser.CloseParen = 7;
JavaScriptParser.OpenBrace = 8;
JavaScriptParser.CloseBrace = 9;
JavaScriptParser.SemiColon = 10;
JavaScriptParser.Comma = 11;
JavaScriptParser.Assign = 12;
JavaScriptParser.QuestionMark = 13;
JavaScriptParser.Colon = 14;
JavaScriptParser.Ellipsis = 15;
JavaScriptParser.Dot = 16;
JavaScriptParser.PlusPlus = 17;
JavaScriptParser.MinusMinus = 18;
JavaScriptParser.Plus = 19;
JavaScriptParser.Minus = 20;
JavaScriptParser.BitNot = 21;
JavaScriptParser.Not = 22;
JavaScriptParser.Multiply = 23;
JavaScriptParser.Divide = 24;
JavaScriptParser.Modulus = 25;
JavaScriptParser.RightShiftArithmetic = 26;
JavaScriptParser.LeftShiftArithmetic = 27;
JavaScriptParser.RightShiftLogical = 28;
JavaScriptParser.LessThan = 29;
JavaScriptParser.MoreThan = 30;
JavaScriptParser.LessThanEquals = 31;
JavaScriptParser.GreaterThanEquals = 32;
JavaScriptParser.Equals_ = 33;
JavaScriptParser.NotEquals = 34;
JavaScriptParser.IdentityEquals = 35;
JavaScriptParser.IdentityNotEquals = 36;
JavaScriptParser.BitAnd = 37;
JavaScriptParser.BitXOr = 38;
JavaScriptParser.BitOr = 39;
JavaScriptParser.And = 40;
JavaScriptParser.Or = 41;
JavaScriptParser.MultiplyAssign = 42;
JavaScriptParser.DivideAssign = 43;
JavaScriptParser.ModulusAssign = 44;
JavaScriptParser.PlusAssign = 45;
JavaScriptParser.MinusAssign = 46;
JavaScriptParser.LeftShiftArithmeticAssign = 47;
JavaScriptParser.RightShiftArithmeticAssign = 48;
JavaScriptParser.RightShiftLogicalAssign = 49;
JavaScriptParser.BitAndAssign = 50;
JavaScriptParser.BitXorAssign = 51;
JavaScriptParser.BitOrAssign = 52;
JavaScriptParser.ARROW = 53;
JavaScriptParser.NullLiteral = 54;
JavaScriptParser.BooleanLiteral = 55;
JavaScriptParser.DecimalLiteral = 56;
JavaScriptParser.HexIntegerLiteral = 57;
JavaScriptParser.OctalIntegerLiteral = 58;
JavaScriptParser.OctalIntegerLiteral2 = 59;
JavaScriptParser.BinaryIntegerLiteral = 60;
JavaScriptParser.Break = 61;
JavaScriptParser.Do = 62;
JavaScriptParser.Instanceof = 63;
JavaScriptParser.Typeof = 64;
JavaScriptParser.Case = 65;
JavaScriptParser.Else = 66;
JavaScriptParser.New = 67;
JavaScriptParser.Var = 68;
JavaScriptParser.Catch = 69;
JavaScriptParser.Finally = 70;
JavaScriptParser.Return = 71;
JavaScriptParser.Void = 72;
JavaScriptParser.Continue = 73;
JavaScriptParser.For = 74;
JavaScriptParser.Switch = 75;
JavaScriptParser.While = 76;
JavaScriptParser.Debugger = 77;
JavaScriptParser.Function = 78;
JavaScriptParser.This = 79;
JavaScriptParser.With = 80;
JavaScriptParser.Default = 81;
JavaScriptParser.If = 82;
JavaScriptParser.Throw = 83;
JavaScriptParser.Delete = 84;
JavaScriptParser.In = 85;
JavaScriptParser.Try = 86;
JavaScriptParser.Class = 87;
JavaScriptParser.Enum = 88;
JavaScriptParser.Extends = 89;
JavaScriptParser.Super = 90;
JavaScriptParser.Const = 91;
JavaScriptParser.Export = 92;
JavaScriptParser.Import = 93;
JavaScriptParser.Implements = 94;
JavaScriptParser.Let = 95;
JavaScriptParser.Private = 96;
JavaScriptParser.Public = 97;
JavaScriptParser.Interface = 98;
JavaScriptParser.Package = 99;
JavaScriptParser.Protected = 100;
JavaScriptParser.Static = 101;
JavaScriptParser.Yield = 102;
JavaScriptParser.Identifier = 103;
JavaScriptParser.StringLiteral = 104;
JavaScriptParser.TemplateStringLiteral = 105;
JavaScriptParser.WhiteSpaces = 106;
JavaScriptParser.LineTerminator = 107;
JavaScriptParser.HtmlComment = 108;
JavaScriptParser.CDataComment = 109;
JavaScriptParser.UnexpectedCharacter = 110;

JavaScriptParser.RULE_program = 0;
JavaScriptParser.RULE_sourceElement = 1;
JavaScriptParser.RULE_statement = 2;
JavaScriptParser.RULE_block = 3;
JavaScriptParser.RULE_statementList = 4;
JavaScriptParser.RULE_variableStatement = 5;
JavaScriptParser.RULE_variableDeclarationList = 6;
JavaScriptParser.RULE_variableDeclaration = 7;
JavaScriptParser.RULE_variableName = 8;
JavaScriptParser.RULE_emptyStatement = 9;
JavaScriptParser.RULE_expressionStatement = 10;
JavaScriptParser.RULE_ifStatement = 11;
JavaScriptParser.RULE_iterationStatement = 12;
JavaScriptParser.RULE_varModifier = 13;
JavaScriptParser.RULE_continueStatement = 14;
JavaScriptParser.RULE_breakStatement = 15;
JavaScriptParser.RULE_returnStatement = 16;
JavaScriptParser.RULE_withStatement = 17;
JavaScriptParser.RULE_switchStatement = 18;
JavaScriptParser.RULE_caseBlock = 19;
JavaScriptParser.RULE_caseClauses = 20;
JavaScriptParser.RULE_caseClause = 21;
JavaScriptParser.RULE_defaultClause = 22;
JavaScriptParser.RULE_labelledStatement = 23;
JavaScriptParser.RULE_throwStatement = 24;
JavaScriptParser.RULE_tryStatement = 25;
JavaScriptParser.RULE_catchProduction = 26;
JavaScriptParser.RULE_finallyProduction = 27;
JavaScriptParser.RULE_debuggerStatement = 28;
JavaScriptParser.RULE_functionDeclaration = 29;
JavaScriptParser.RULE_classDeclaration = 30;
JavaScriptParser.RULE_classTail = 31;
JavaScriptParser.RULE_classElement = 32;
JavaScriptParser.RULE_methodDefinition = 33;
JavaScriptParser.RULE_generatorMethod = 34;
JavaScriptParser.RULE_formalParameterList = 35;
JavaScriptParser.RULE_formalParameterArg = 36;
JavaScriptParser.RULE_lastFormalParameterArg = 37;
JavaScriptParser.RULE_functionBody = 38;
JavaScriptParser.RULE_sourceElements = 39;
JavaScriptParser.RULE_arrayLiteral = 40;
JavaScriptParser.RULE_elementList = 41;
JavaScriptParser.RULE_lastElement = 42;
JavaScriptParser.RULE_objectLiteral = 43;
JavaScriptParser.RULE_propertyAssignment = 44;
JavaScriptParser.RULE_propertyName = 45;
JavaScriptParser.RULE_arguments = 46;
JavaScriptParser.RULE_lastArgument = 47;
JavaScriptParser.RULE_expressionSequence = 48;
JavaScriptParser.RULE_singleExpression = 49;
JavaScriptParser.RULE_arrowFunctionParameters = 50;
JavaScriptParser.RULE_arrowFunctionBody = 51;
JavaScriptParser.RULE_assignmentOperator = 52;
JavaScriptParser.RULE_literal = 53;
JavaScriptParser.RULE_numericLiteral = 54;
JavaScriptParser.RULE_identifierName = 55;
JavaScriptParser.RULE_reservedWord = 56;
JavaScriptParser.RULE_keyword = 57;
JavaScriptParser.RULE_getter = 58;
JavaScriptParser.RULE_setter = 59;
JavaScriptParser.RULE_eos = 60;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavaScriptParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.EOF = function() {
    return this.getToken(JavaScriptParser.EOF, 0);
};

ProgramContext.prototype.sourceElements = function() {
    return this.getTypedRuleContext(SourceElementsContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavaScriptParserListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavaScriptParserListener ) {
        listener.exitProgram(this);
	}
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavaScriptParserVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavaScriptParser.ProgramContext = ProgramContext;

JavaScriptParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, JavaScriptParser.RULE_program);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        if(la_===1) {
            this.state = 122;
            this.sourceElements();

        }
        this.state = 125;
        this.match(JavaScriptParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SourceElementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavaScriptParser.RULE_sourceElement;
    return this;
}

SourceElementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceElementContext.prototype.constructor = SourceElementContext;

SourceElementContext.prototype.statement = function() {
    return this.getTypedRuleContext(StatementContext,0);
};

SourceElementContext.prototype.Export = function() {
    return this.getToken(JavaScriptParser.Export, 0);
};

SourceElementContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavaScriptParserListener ) {
        listener.enterSourceElement(this);
	}
};

SourceElementContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavaScriptParserListener ) {
        listener.exitSourceElement(this);
	}
};

SourceElementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavaScriptParserVisitor ) {
        return visitor.visitSourceElement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavaScriptParser.SourceElementContext = SourceElementContext;

JavaScriptParser.prototype.sourceElement = function() {

    var localctx = new SourceElementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, JavaScriptParser.RULE_sourceElement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 128;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        if(la_===1) {
            this.state = 127;
            this.match(JavaScriptParser.Export);

        }
        this.state = 130;
        this.statement();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavaScriptParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

StatementContext.prototype.variableStatement = function() {
    return this.getTypedRuleContext(VariableStatementContext,0);
};

StatementContext.prototype.emptyStatement = function() {
    return this.getTypedRuleContext(EmptyStatementContext,0);
};

StatementContext.prototype.classDeclaration = function() {
    return this.getTypedRuleContext(ClassDeclarationContext,0);
};

StatementContext.prototype.expressionStatement = function() {
    return this.getTypedRuleContext(ExpressionStatementContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.iterationStatement = function() {
    return this.getTypedRuleContext(IterationStatementContext,0);
};

StatementContext.prototype.continueStatement = function() {
    return this.getTypedRuleContext(ContinueStatementContext,0);
};

StatementContext.prototype.breakStatement = function() {
    return this.getTypedRuleContext(BreakStatementContext,0);
};

StatementContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};

StatementContext.prototype.withStatement = function() {
    return this.getTypedRuleContext(WithStatementContext,0);
};

StatementContext.prototype.labelledStatement = function() {
    return this.getTypedRuleContext(LabelledStatementContext,0);
};

StatementContext.prototype.switchStatement = function() {
    return this.getTypedRuleContext(SwitchStatementContext,0);
};

StatementContext.prototype.throwStatement = function() {
    return this.getTypedRuleContext(ThrowStatementContext,0);
};

StatementContext.prototype.tryStatement = function() {
    return this.getTypedRuleContext(TryStatementContext,0);
};

StatementContext.prototype.debuggerStatement = function() {
    return this.getTypedRuleContext(DebuggerStatementContext,0);
};

StatementContext.prototype.functionDeclaration = function() {
    return this.getTypedRuleContext(FunctionDeclarationContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavaScriptParserListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavaScriptParserListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavaScriptParserVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavaScriptParser.StatementContext = StatementContext;

JavaScriptParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, JavaScriptParser.RULE_statement);
    try {
        this.state = 149;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 132;
            this.block();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 133;
            this.variableStatement();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 134;
            this.emptyStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 135;
            this.classDeclaration();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 136;
            this.expressionStatement();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 137;
            this.ifStatement();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 138;
            this.iterationStatement();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 139;
            this.continueStatement();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 140;
            this.breakStatement();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 141;
            this.returnStatement();
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 142;
            this.withStatement();
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 143;
            this.labelledStatement();
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 144;
            this.switchStatement();
            break;
